--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <HEAD>
   <title>Todo App</title>
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:300,400,700'>
-  <link rel="stylesheet" href="style.css" MEDIA="screen" charset="utf-8">
+  <link
+    rel="stylesheet" 
+    href="style.css" 
+    MEDIA="screen" 
+    charset="utf-8"
+  >
 </HEAD>
 <body>
   <div class="aaa">
