--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <HEAD>
+  <head>
     <title>Todo App</title>
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:300,400,700'>
     <link
       rel="stylesheet" 
       href="style.css" 
-      MEDIA="screen" 
+      media="screen" 
       charset="utf-8"
     >
-  </HEAD>
+  </head>
   <body>
     <div class="aaa">
       <img src="./eisenhower-matrix.jpg">
@@ -57,6 +57,6 @@
         </li>
       </ul>
     </div>
-    <script SRC="app.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
