--- a/index.html
+++ b/index.html
@@ -11,23 +11,21 @@
     >
   </head>
   <body>
-    <div class="aaa">
+    <aside class="aaa">
       <img src="./eisenhower-matrix.jpg">
       <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
-    <div class="centered-main-page-element">
-      <p id="topSectionForAddingElementToList">
-        <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
-          <input id="new-task" class="task" type="text">
-          <button>Add</button>
-        </div>
-      </p>
+    </aside>
+    <section class="centered-main-page-element">
+      <h3 for="new-task">Add Item</h3>
+      <div class="task-row-wrapper">
+        <input id="new-task" class="task" type="text">
+        <button>Add</button>
+      </div>
       <h3>Todo</h3>
       <ul id="incompleteTasks">
         <li>
           <input type="checkbox">
-          <label class="task">Pay Bills</label>
+          <span class="task">Pay Bills</span>
           <input type="text" class="task">
           <button class="edit">Edit</button>
           <button class="delete">
@@ -36,7 +34,7 @@
         </li>
         <li class="editMode">
           <input type="checkbox">
-          <label class="task">Go Shopping</label>
+          <span class="task">Go Shopping</span>
           <input type="text" value="Go Shopping" class="task">
           <button class="edit">Save</button>
           <button class="delete">
@@ -48,7 +46,7 @@
       <ul id="completed-tasks">
         <li>
           <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
+          <span class="task">See the Doctor</span>
           <input type="text" class="task">
           <button class="edit">Edit</button>
           <button class="delete">
@@ -56,7 +54,7 @@
           </button>
         </li>
       </ul>
-    </div>
+    </section>
     <script src="app.js"></script>
   </body>
 </html>
