refactor: update files according to rule 1.1 in html-and-css-extended.md and change tags with semantic rules

--- a/index.html
+++ b/index.html
@@ -12,16 +12,17 @@
   </head>
   <body>
     <aside class="aaa">
+      <h1>ToDo App</h1>
       <img src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
       <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </aside>
-    <section class="centered-main-page-element">
-      <h3 for="new-task">Add Item</h3>
+    <main class="centered-main-page-element">
+      <label for="new-task">Add Item</label>
       <div class="task-row-wrapper">
         <input id="new-task" class="task" type="text">
         <button>Add</button>
       </div>
-      <h3>Todo</h3>
+      <h2>Todo</h2>
       <ul id="incompleteTasks">
         <li>
           <input type="checkbox">
@@ -42,7 +43,7 @@
           </button>
         </li>
       </ul>
-      <h3>Completed</h3>
+      <h2>Completed</h2>
       <ul id="completed-tasks">
         <li>
           <input type="checkbox" checked>
@@ -54,7 +55,7 @@
           </button>
         </li>
       </ul>
-    </section>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
